T-69 Fixed text overflow issue

--- a/src/pages/PlaylistPage/PlaylistPage.module.scss
+++ b/src/pages/PlaylistPage/PlaylistPage.module.scss
@@ -44,11 +44,21 @@
     width: 100%;
     text-align: center;
     margin-bottom: 30px;
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   &Title {
     width: 100%;
     text-align: center;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   &Info {
@@ -89,8 +99,9 @@
           background-size: cover;
           border-radius: 5px;
           min-width: 250px;
-          height: 300px;
+          height: 250px;
           margin: 50px 0 20px 0;
+          background-position: center;
         }
       }
     }
